Import revised translations.  DO NOT MERGE
Change-Id: Ic2e2fd3330cb069f55054e08aad153c1b342e0a4

--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -193,7 +193,7 @@
     <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="7761390725880773697">"USB memorija uklonjena je dok se upotrebljavala!"</string>
     <string name="sdcard_settings_bad_removal_status" product="default" msgid="5145797653495907970">"SD kartica je uklonjena tijekom upotrebe!"</string>
     <string name="sdcard_settings_used_bytes_label" msgid="8820289486001170836">"Iskorišteni bajtovi:"</string>
-    <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="7503429447676219564">"Skeniranje USB poh. za medije…"</string>
+    <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="7503429447676219564">"Skeniranje USB mem. za medije…"</string>
     <string name="sdcard_settings_scanning_status" product="default" msgid="2763464949274455656">"Pretraživanje medija na SD kartici skeniranjem…"</string>
     <string name="sdcard_settings_read_only_status" product="nosdcard" msgid="3771783090621312312">"USB poh. uklj. samo za čitanje"</string>
     <string name="sdcard_settings_read_only_status" product="default" msgid="5706115860484118911">"SD kartica priključena je u načinu samo za čitanje"</string>
@@ -537,7 +537,7 @@
     <string name="sd_eject" product="default" msgid="6915293408836853020">"Isključi SD karticu"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="5009296896648072891">"Isključi unutarnju USB memoriju"</string>
     <string name="sd_eject_summary" product="default" msgid="3300599435073550246">"Isključite karticu SD radi sigurnog uklanjanja"</string>
-    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Umetni mem. USB za uklj."</string>
+    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Umetni USB mem. za uklj."</string>
     <string name="sd_insert_summary" product="default" msgid="2048640010381803841">"Umetnite SD karticu za uključivanje"</string>
     <string name="sd_mount" product="nosdcard" msgid="8966695015677343116">"Uključi memoriju USB"</string>
     <string name="sd_mount" product="default" msgid="5940523765187704135">"Uključivanje SD kartice"</string>
@@ -553,7 +553,7 @@
     <string name="dlg_confirm_unmount_title" product="default" msgid="8612140627310646730">"Isključi SD karticu"</string>
     <string name="dlg_confirm_unmount_text" product="nosdcard" msgid="3390169455621185223">"Ako isključite memoriju USB, neke će se aplikacije koje upotrebljavate zaustaviti i mogu biti nedostupne dok ponovno ne uključite memoriju USB."</string>
     <string name="dlg_confirm_unmount_text" product="default" msgid="5851214273718817727">"Ako isključite SD karticu, dio aplikacija koje koristite zaustavit će rad i možda će biti nedostupne sve dok ponovno ne uključite SD karticu."</string>
-    <string name="dlg_error_unmount_title" product="nosdcard" msgid="7695491947411836733">"Isključ. memorije USB neuspjelo"</string>
+    <string name="dlg_error_unmount_title" product="nosdcard" msgid="7695491947411836733">"Neusp. isključ. USB memorije"</string>
     <string name="dlg_error_unmount_title" product="default" msgid="4004106918266783081">"Isključivanje SD kartice nije uspjelo"</string>
     <string name="dlg_error_unmount_text" product="nosdcard" msgid="1450864147013376592">"Memorija USB ne može se isključiti. Pokušajte ponovno kasnije."</string>
     <string name="dlg_error_unmount_text" product="default" msgid="9188972789897713180">"Nije moguće isključiti SD karticu. Pokušajte ponovno."</string>
@@ -1163,4 +1163,7 @@
     <string name="wimax_settings" msgid="1574837328738396794">"Postavke za 4G"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"Postavljanje i upravljanje 4G mrežom i modemom"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MAC adresa"</string>
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
