--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -838,7 +838,7 @@
     <string name="auto_punctuate_summary" msgid="4372126865670574837">"Naciśnij dwukrotnie klawisz spacji, aby wstawić kropkę"</string>
     <string name="show_password" msgid="2198798062604049206">"Widoczne hasła"</string>
     <string name="show_password_summary" msgid="3806709974395178121">"Pokazuj hasło podczas wpisywania"</string>
-    <string name="ime_security_warning" msgid="812267421486877917">"Ta metoda wprowadzania może gromadzić cały wpisywany tekst, w tym dane osobiste w postaci haseł i numerów kart kredytowych. Metoda pochodzi z aplikacji <xliff:g id="IME_APPLICATION_NAME">%1$s</xliff:g>. Czy użyć tej metody wprowadzania?"</string>
+    <string name="ime_security_warning" msgid="812267421486877917">"Ten sposób wprowadzania tekstu może gromadzić całą wpisaną treść, w tym dane osobiste w postaci haseł i numerów kart kredytowych. Dotyczy to aplikacji <xliff:g id="IME_APPLICATION_NAME">%1$s</xliff:g>. Czy użyć tego sposobu wprowadzania tekstu?"</string>
     <string name="user_dict_settings_titlebar" msgid="765659257455000490">"Słownik użytkownika"</string>
     <string name="user_dict_settings_title" msgid="8357027437499042191">"Słownik użytkownika"</string>
     <string name="user_dict_settings_summary" msgid="7965571192902870454"></string>
@@ -1163,4 +1163,7 @@
     <string name="wimax_settings" msgid="1574837328738396794">"Ustawienia 4G"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"Konfiguruj sieć i modem 4G oraz zarządzaj nimi"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"Adres MAC 4G"</string>
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
