--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -1163,4 +1163,7 @@
     <string name="wimax_settings" msgid="1574837328738396794">"Nastavení sítě 4G"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"Nastavení a správa sítě 4G a modemu"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"Adresa MAC sítě 4G"</string>
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
