--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -1163,4 +1163,7 @@
     <string name="wimax_settings" msgid="1574837328738396794">"4G 설정"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"4G 네트워크와 모뎀 설정 및 관리"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MAC 주소"</string>
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
