--- a/res/values-rm/strings.xml
+++ b/res/values-rm/strings.xml
@@ -1191,4 +1191,7 @@
     <skip />
     <!-- no translation found for status_wimax_mac_address (8390791848661413416) -->
     <skip />
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
