--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -1161,6 +1161,9 @@
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Notificări"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Feedback"</string>
     <string name="wimax_settings" msgid="1574837328738396794">"Setări 4G"</string>
-    <string name="wimax_settings_summary" msgid="3207355006084135453">"Configuraţi &amp; gest. reţeaua 4G şi modemul"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"Configuraţi şi gestionaţi reţeaua 4G şi modemul"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"Adresă MAC 4G"</string>
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
