--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1163,4 +1163,7 @@
     <string name="wimax_settings" msgid="1574837328738396794">"Nastavenia 4G"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"Nastaviť a spravovať sieť 4G a modem"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"Adresa 4G MAC"</string>
+    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
+    <string name="additional_system_update" msgid="1810924041505424849"></string>
+    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
