DO NOT MERGE Put additional update package names in config.xml
Prevents them from being duplicated to other language resources,
which in turn prevents the overlay from working. This fixes the
bug where we see a blank menu item in Settings->About phone
when the non-default language is selected.

Change-Id: I73056716156c580606433bb63abfdd35c1b9892a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2654,7 +2654,5 @@ found in the list of installed applications.</string>
     <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
     <string name="status_wimax_mac_address">4G MAC address</string>
 
-    <string name="additional_system_update_settings_list_item_title"></string>
-    <string name="additional_system_update"></string>
-    <string name="additional_system_update_menu"></string>
+    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
 </resources>
