Revert "Import revised translations.  DO NOT MERGE"
This reverts commit 955ab98f030cd198d838bdff8768ff87a17be9a8.

Bug 4204088 requires that these strings not be translated.

Change-Id: I98044cc669a9ee70a8892123a05c0fc33599d404

--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -537,7 +537,7 @@
     <string name="sd_eject" product="default" msgid="6915293408836853020">"SD kartının bağlantısını kes"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="5009296896648072891">"Dahili USB depolamanın bağ kes"</string>
     <string name="sd_eject_summary" product="default" msgid="3300599435073550246">"Güvenle çıkarabilmnz için SD kartın bağl kesin"</string>
-    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Bağlantı için USByi takın"</string>
+    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Bğl için USB dep brm takn"</string>
     <string name="sd_insert_summary" product="default" msgid="2048640010381803841">"Eklemek için bir SD kart yerleştirin"</string>
     <string name="sd_mount" product="nosdcard" msgid="8966695015677343116">"USB depl birimini ekleyin"</string>
     <string name="sd_mount" product="default" msgid="5940523765187704135">"SD kartı ekle"</string>
@@ -1163,7 +1163,4 @@
     <string name="wimax_settings" msgid="1574837328738396794">"4G ayarları"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"4G ağı ve modemi kurma ve yönetme"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MAC adresi"</string>
-    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
-    <string name="additional_system_update" msgid="1810924041505424849"></string>
-    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
