--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -190,7 +190,7 @@
     <string name="sdcard_settings_mass_storage_status" product="default" msgid="4786433969313661655">"SD-Karte wird als Massenspeichergerät verwendet"</string>
     <string name="sdcard_settings_unmounted_status" product="nosdcard" msgid="7503300818792750913">"USB-Speicher kann nun entfernt werden"</string>
     <string name="sdcard_settings_unmounted_status" product="default" msgid="3812022095683863087">"Die SD-Karte kann jetzt entfernt werden."</string>
-    <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="7761390725880773697">"USB-Speicher während Verwendung entfernt"</string>
+    <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="7761390725880773697">"USB-Speicher wurde während Verw. entfernt."</string>
     <string name="sdcard_settings_bad_removal_status" product="default" msgid="5145797653495907970">"Die SD-Karte wurde während der Verwendung entfernt!"</string>
     <string name="sdcard_settings_used_bytes_label" msgid="8820289486001170836">"Verwendete Bytes:"</string>
     <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="7503429447676219564">"USB-Sp. auf Medien scannen"</string>
@@ -1163,7 +1163,4 @@
     <string name="wimax_settings" msgid="1574837328738396794">"4G-Einstellungen"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"4G-Netzwerk einrichten &amp; verwalten"</string>
     <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G-MAC-Adresse"</string>
-    <string name="additional_system_update_settings_list_item_title" msgid="229615906377990968"></string>
-    <string name="additional_system_update" msgid="1810924041505424849"></string>
-    <string name="additional_system_update_menu" msgid="385634350600180091"></string>
 </resources>
