--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -838,7 +838,7 @@
     <string name="auto_punctuate_summary" msgid="4372126865670574837">"Naciśnij dwukrotnie klawisz spacji, aby wstawić kropkę"</string>
     <string name="show_password" msgid="2198798062604049206">"Widoczne hasła"</string>
     <string name="show_password_summary" msgid="3806709974395178121">"Pokazuj hasło podczas wpisywania"</string>
-    <string name="ime_security_warning" msgid="812267421486877917">"Ta metoda wprowadzania może gromadzić cały wpisywany tekst, w tym dane osobiste w postaci haseł i numerów kart kredytowych. Metoda pochodzi z aplikacji <xliff:g id="IME_APPLICATION_NAME">%1$s</xliff:g>. Czy użyć tej metody wprowadzania?"</string>
+    <string name="ime_security_warning" msgid="812267421486877917">"Ten sposób wprowadzania tekstu może gromadzić całą wpisaną treść, w tym dane osobiste w postaci haseł i numerów kart kredytowych. Dotyczy to aplikacji <xliff:g id="IME_APPLICATION_NAME">%1$s</xliff:g>. Czy użyć tego sposobu wprowadzania tekstu?"</string>
     <string name="user_dict_settings_titlebar" msgid="765659257455000490">"Słownik użytkownika"</string>
     <string name="user_dict_settings_title" msgid="8357027437499042191">"Słownik użytkownika"</string>
     <string name="user_dict_settings_summary" msgid="7965571192902870454"></string>
