--- a/res/values-rm/strings.xml
+++ b/res/values-rm/strings.xml
@@ -815,10 +815,8 @@
     <string name="service_started_by_app" msgid="6575184738671598131">"Servetsch avià da l\'applicaziun"</string>
     <!-- no translation found for service_client_name (4037193625611815517) -->
     <skip />
-    <!-- no translation found for service_background_processes (6844156253576174488) -->
-    <skip />
-    <!-- no translation found for service_foreground_processes (7583975676795574276) -->
-    <skip />
+    <!-- outdated translation 4939976652114824214 -->     <string name="service_background_processes" msgid="6844156253576174488">"<xliff:g id="MEMORY">%1$s</xliff:g> disponibel"</string>
+    <!-- outdated translation 2474726487867913314 -->     <string name="service_foreground_processes" msgid="7583975676795574276">"<xliff:g id="MEMORY">%1$s</xliff:g> vegnan utilisads"</string>
     <!-- no translation found for memory (6609961111091483458) -->
     <skip />
     <!-- no translation found for service_process_name (4098932168654826656) -->
