--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -190,7 +190,7 @@
     <string name="sdcard_settings_mass_storage_status" product="default" msgid="4786433969313661655">"SD-карта используется в качестве устройства массовой памяти"</string>
     <string name="sdcard_settings_unmounted_status" product="nosdcard" msgid="7503300818792750913">"USB-накопитель можно отключить"</string>
     <string name="sdcard_settings_unmounted_status" product="default" msgid="3812022095683863087">"SD-карта может быть извлечена"</string>
-    <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="7761390725880773697">"Накопитель извлечен во время использования!"</string>
+    <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="7761390725880773697">"Накопитель извлечен при исп.!"</string>
     <string name="sdcard_settings_bad_removal_status" product="default" msgid="5145797653495907970">"SD-карта была извлечена во время использования!"</string>
     <string name="sdcard_settings_used_bytes_label" msgid="8820289486001170836">"Использовано байтов:"</string>
     <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="7503429447676219564">"Сканирование USB-накопителя..."</string>
@@ -537,7 +537,7 @@
     <string name="sd_eject" product="default" msgid="6915293408836853020">"Извлечь SD-карту"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="5009296896648072891">"Отключить внутр. USB-накопитель"</string>
     <string name="sd_eject_summary" product="default" msgid="3300599435073550246">"Отключение SD-карты для ее безопасного извлечения из устройства"</string>
-    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Вставить USB-накопитель для подключения"</string>
+    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Вставить USB-накопитель"</string>
     <string name="sd_insert_summary" product="default" msgid="2048640010381803841">"Вставьте SD-карту для подключения"</string>
     <string name="sd_mount" product="nosdcard" msgid="8966695015677343116">"Подключить USB-накопитель"</string>
     <string name="sd_mount" product="default" msgid="5940523765187704135">"Подключить SD-карту"</string>
@@ -1097,7 +1097,7 @@
     <string name="vpn_secret_not_set" msgid="1037792636371641845">"(не настроено)"</string>
     <string name="credentials_category" msgid="8536992056377271234">"Хранилище регистрационных данных"</string>
     <string name="credentials_access" msgid="4843187230913860492">"Доступ к хранилищу"</string>
-    <string name="credentials_access_summary" msgid="319662078718574168">"Разрешить приложениям использовать хранилище сертификатов и рег. данных"</string>
+    <string name="credentials_access_summary" msgid="319662078718574168">"Разрешить приложениям использовать хранилище сертификатов и учет. данных"</string>
     <string name="credentials_unlock" msgid="1463040326264133844">"Ввод пароля"</string>
     <string name="credentials_unlock_hint" msgid="594679530407918031">"Введите пароль для доступа в хранилище регистрационных данных."</string>
     <string name="credentials_install_certificates" product="nosdcard" msgid="619171634797689906">"Устанавливать с накопителя"</string>
@@ -1108,7 +1108,7 @@
     <string name="credentials_set_password_summary" msgid="8287876917562085701">"Установить или изменить пароль для доступа в хранилище рег. данных"</string>
     <string name="credentials_reset" msgid="9170150870552453457">"Очистить хранилище"</string>
     <string name="credentials_reset_summary" msgid="1530388094693731636">"Очистить все регистрационные данные в хранилище и сбросить пароль"</string>
-    <string name="credentials_reset_hint" msgid="819990295796804516">"Вы действительно хотите удалить все регистрационные данные и сбросить пароль для доступа в хранилище регистрационных данных?"</string>
+    <string name="credentials_reset_hint" msgid="819990295796804516">"Вы действительно хотите удалить все учетные данные и сбросить пароль для доступа в хранилище учетных данных?"</string>
     <string name="credentials_old_password" msgid="7553393815538684028">"Текущий пароль:"</string>
     <string name="credentials_new_password" msgid="267487774686796938">"Новый пароль:"</string>
     <string name="credentials_confirm_password" msgid="4732250000633424345">"Подтвердите новый пароль:"</string>
@@ -1162,5 +1162,5 @@
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Отклик на действия"</string>
     <string name="wimax_settings" msgid="1574837328738396794">"Настройки 4G"</string>
     <string name="wimax_settings_summary" msgid="3207355006084135453">"Подключение и настройка сети и модема 4G"</string>
-    <string name="status_wimax_mac_address" msgid="8390791848661413416">"МАС-адрес 4G"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"МАС-адрес для 4G"</string>
 </resources>
