--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -537,7 +537,7 @@
     <string name="sd_eject" product="default" msgid="6915293408836853020">"SD kartının bağlantısını kes"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="5009296896648072891">"Dahili USB depolamanın bağ kes"</string>
     <string name="sd_eject_summary" product="default" msgid="3300599435073550246">"Güvenle çıkarabilmnz için SD kartın bağl kesin"</string>
-    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Bğl için USB dep brm takn"</string>
+    <string name="sd_insert_summary" product="nosdcard" msgid="5264016886409577313">"Bağlantı için USByi takın"</string>
     <string name="sd_insert_summary" product="default" msgid="2048640010381803841">"Eklemek için bir SD kart yerleştirin"</string>
     <string name="sd_mount" product="nosdcard" msgid="8966695015677343116">"USB depl birimini ekleyin"</string>
     <string name="sd_mount" product="default" msgid="5940523765187704135">"SD kartı ekle"</string>
