Implemented a modified AppWidgetPicker dialogue
Reference:
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/d250540fb07ae144e9cc104de464b76e04b49c56#diff-1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2647,4 +2647,8 @@ found in the list of installed applications.</string>
     <string name="sound_category_calls_title">Incoming calls</string>
     <string name="sound_category_notification_title">Notifications</string>
     <string name="sound_category_feedback_title">Feedback</string>
+
+    <!-- Widget Picker -->
+    <string name="widget_count">(%d widgets)</string>
+
 </resources>
