DO NOT MERGE Clarify additional system update string length/usage
Change-Id: I627c3d50de1af23a620fe6ca3abac03ad3aa7d49

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2654,5 +2654,8 @@ found in the list of installed applications.</string>
     <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
     <string name="status_wimax_mac_address">4G MAC address</string>
 
+    <!-- A menu item in "About phone" that allows the user to update the phone with settings
+    from their cell phone carrier. The use of the string is similar to the string
+    "system_update_settings_list_item_title" in this project. [CHAR LIMIT=25] -->
     <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
 </resources>
